create dagger Application and modules

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".pinterest.view.MainActivity">
 
     <fragment
-        android:id="@+id/projectsSearchFragment"
+        android:id="@+id/pinterestListFragment"
         class="com.mindvalley.pinterest.view.PinterestListFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
